# KB_builder

./: .gitignore  README.md  main.py  pyproject.toml
utils/: functions.py  knowledge_graph.py  prompts.py
